started the Frame with rules