@@ -1,4 +1,5 @@
 import java.io.*;
+import javax.swing.*;
 public class SEAndroidAutomation{
 	public static void main(String args[]){
 		String dirName = args[0];
@@ -6,8 +7,7 @@ public class SEAndroidAutomation{
 		//String cdDirCmd[] = {"cd", dirName};
 		String sepolicyPullCmd[] = {"adb", "pull","sepolicy","./"+dirName};
 		String bugReportCmd[] = {"adb", "bugreport"};
-		String ruleCmd[] = {"audit2allow", "./"+dirName+"/audit.log"};//,">","Rules"};
-		String ruleCmd2[] = {"cat", "Rules", "|", "grep ","allow"};//,">","OnlyRules"};
+		String ruleCmd[] = {"audit2allow", "-i"+"audit.log","-o"+"./"+dirName+"/Rules"};// -p ./"+dirName+"/sepolicy"};//,">","Rules"};
 		try{	
 			Runtime rt = Runtime.getRuntime();
 		
@@ -34,54 +34,52 @@ public class SEAndroidAutomation{
 			//pb.redirectErrorStream(true);
 			//pr = pb.start();
 			//pr.waitFor();
-			
+			/*System.out.println("Starting the BugReport....Please wait!!!");
 			pr = Runtime.getRuntime().exec("adb bugreport");
 			br = new BufferedReader(new InputStreamReader(pr.getInputStream()));
 			f = new File("./"+dirName+"/audit.log");
 			fw = new FileWriter(f.getAbsoluteFile());
 			bw = new BufferedWriter(fw);
-			//DataOutputStream os = new DataOutputStream(pr.getOutputStream());            
-            		//for (String tmpCmd : bugReportCmd) 
-            		//      os.writeBytes(tmpCmd+"\n");
+			
 			String temp = br.readLine();
-			//int c = 0;
 			while(temp != null){
 					temp += "\n";
 					bw.write(temp);
 					temp = br.readLine();
-					//c++;
 			}
+			br.close();
 			bw.close();
 			System.out.println("Done Writing the Bugreport to ./"+dirName+"audit.log");
-
-			pr = Runtime.getRuntime().exec("audit2allow ./"+dirName+"/audit.log");
-			br = new BufferedReader(new InputStreamReader(pr.getInputStream()));
-            		f = new File("./"+dirName+"/Rules");
-			fw = new FileWriter(f.getAbsoluteFile());
-			bw = new BufferedWriter(fw);
-			temp = br.readLine();
-			while(temp != null){
-				temp += "\n";
-				bw.write(temp);
-				temp = br.readLine();			
-			}
-			
-			pr = Runtime.getRuntime().exec("cat ./"+dirName+"/Rules"+" | grep allow");
+			*/
+			pb = new ProcessBuilder(ruleCmd);
+			pb.redirectErrorStream(true);
+			pr = pb.start();
+			pr.waitFor();
+			String pattern = "allow ";	
+			pr = Runtime.getRuntime().exec("grep -w "+pattern+"./"+dirName+"/Rules");
 			br = new BufferedReader(new InputStreamReader(pr.getInputStream()));
             		f = new File("./"+dirName+"/OnlyRules");
 			fw = new FileWriter(f.getAbsoluteFile());
 			bw = new BufferedWriter(fw);
 			temp = br.readLine();
+			String rules[] = new String[20];
+			int i=0;
 			while(temp != null){
 				temp += "\n";
+				rules[i++]=temp;
 				bw.write(temp);
-				temp = br.readLine();		
+				temp = br.readLine();			
 			}
-			System.out.println("Done Writing the Rules to ./"+dirName+"OnlyRules");
+			br.close();
+			bw.close();
 			
+			System.out.println("Done Writing the Rules to ./"+dirName+"/OnlyRules");
+	
+			RulesFrame obj = new RulesFrame(rules);
+			obj.setVisible(true);
 			br = new BufferedReader(new FileReader("./"+dirName+"/OnlyRules"));
 			while((temp = br.readLine()) != null){
-				pr = Runtime.getRuntime().exec("sepolicy-inject ");
+				//pr = Runtime.getRuntime().exec("sepolicy-inject ");
 				System.out.println(temp);
 			}
 		}catch(Exception e){
